--- a/css/main.css
+++ b/css/main.css
@@ -1008,3 +1008,30 @@ svg line {
 	    transform: translate(-50% , -100% ) scale(3);
 	}
 }
+/* ==========================================================================
+   Exercise Specific
+   ========================================================================== */
+.ch5.ex1.layout-2 .question-number {display: none;}
+.ch5.ex1.layout-2 .exercise__question-number {
+	float: left;
+	background: none;
+	padding-left: 46px;
+}
+.ch5.ex1.layout-2 .exercise__question-text {
+	text-align: right;
+	font-size: 22px;
+	padding-right: 30px;
+}
+.ch5.ex1.layout-2 .exercise__answer-list {
+	display: block;
+	list-style-type: decimal;
+}
+.ch5.ex1.layout-2 .exercise__answer-text {padding-left: 20px;
+
+}
+.ch5.ex1.layout-2 .exercise__answer .fa {
+	float: right;
+	margin-right: 54px;
+}
+.ch5.ex1.layout-2 .answer-checked .exercise__answer.is-selected.is-correct-answer:after {content: none;}
+.ch5.ex1.layout-2 .answer-checked .exercise__answer.is-selected:before {right: 15px;}
