--- a/css/main.css
+++ b/css/main.css
@@ -1232,4 +1232,45 @@ svg line {
 .ch10.ex3 .dropzone .exercise__answer {width: 100%;}
 .ch10.ex3 .dropzone .exercise__answer-image {height: 174px;}
 
-to  {cursor: pointer;padding: 7px 5px;display: block;}
+.ch8.ex1 .exercise__answer-text-inner > .fa:first-child,
+.ch4.ex1a .exercise__answer-text-inner > .fa-check-circle,
+.ch4.ex1a .exercise__answer-text-inner > .fa-times-circle,
+.ch4.ex1b .exercise__answer-text-inner > .fa-check-circle,
+.ch4.ex1b .exercise__answer-text-inner > .fa-times-circle
+{ display: none; }
+
+.ch4.ex1a .exercise__question-image {
+	width: auto;
+}
+.ch4.ex1b .exercise__question-number {
+	margin-bottom: 8px;
+}
+.ch4.ex1b .tof0 .exercise__answer,
+.ch4.ex1b .tof1 .exercise__answer {
+	display: inline-block;
+	text-align: center;
+	vertical-align: top;
+}
+.ch4.ex1b .tof0 .exercise__answer {
+	width: 20%;
+	font-size: 18px;
+	height: 209px;
+	
+}
+.ch4.ex1b .tof0 .exercise__answer .fa-square-o,
+.ch4.ex1b .tof0 .exercise__answer .fa-check-square
+{
+	display: block;
+}
+.ch4.ex1b .tof1 .exercise__answer {
+	width: 48%;
+	margin: 0 1%;
+}
+.ch4.ex1b .exercise__question-image {
+	height: 107px;
+}
+
+.ch4.ex1b .answer-checked .exercise__answer.is-selected:before {top: -3px;right: 50%;margin-right: -13px;
+
+}
+.ch4.ex1b .answer-checked .exercise__answer.is-selected:after {content: none;}
